--- a/src/Components/Footer/index.css
+++ b/src/Components/Footer/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,6 +42,6 @@ table {
 	border-spacing: 0;
 }
 
-body{
-  background-color: #172554;
+footer{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
