--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+}  
 
-body{
+/* body{
   background-color: #172554;
-}
+} */
