--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,7 @@ nav {
 	background-color: #f0ad4e;
 	display: flex;
 	justify-content: center;
+	justify-self: center;
 	border-radius: 20px;
 	max-width: 30px;
 	position: relative;
@@ -113,6 +114,7 @@ nav {
 	font-size: 11px;
 	cursor: pointer;
 	height: 20px;
+	width:100px;
   }
   
   .item-minus-button {
@@ -122,6 +124,7 @@ nav {
 	border: none;
 	font-size: 11px;
 	cursor: pointer;
+	width:100px;
   }
   
   .item-plus-button {
@@ -131,6 +134,7 @@ nav {
 	border: none;
 	font-size: 11px;
 	cursor: pointer;
+	width:100px;
   }
   
   /****** Shopping Cart ********/
@@ -138,8 +142,10 @@ nav {
   .cart-container {
 	display: flex;
 	justify-content: center;
+	background: rgb(197, 197, 223);
 	margin: 30px;
-	background-color: white;
+	border-radius: 5px;
+	padding: 8px;
   }
   
   .cart-count {
@@ -147,3 +153,4 @@ nav {
 	border-radius: 20px;
 	padding: 8px;
   }
+  
